--- a/backend/notebooks/note_1.ipynb
+++ b/backend/notebooks/note_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "9       КР                 кадровый резерв"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
        "[1674 rows x 3 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "11                          нужен оператор  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "       'дмс', 'оператор', 'обучение', 'Отпуск'], dtype=object)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
        "[1674 rows x 3 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
        "9       КР                 кадровый резерв"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
        "5  Для внесения данных по личному автомобилю обра...  автомобиль  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,79 +794,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>question</th>\n",
-       "      <th>content</th>\n",
-       "      <th>category</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>503</th>\n",
-       "      <td>вход в личный кабинет</td>\n",
-       "      <td>При проблемах со входом в личный кабинет, преж...</td>\n",
-       "      <td>ЛК</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>930</th>\n",
-       "      <td>надбавка</td>\n",
-       "      <td>Создайте, пожалуйста, обращение в ИТ поддержку...</td>\n",
-       "      <td>поддержка</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1662</th>\n",
-       "      <td>надбавка</td>\n",
-       "      <td>По данному вопросу Вы можете обратиться в кадр...</td>\n",
-       "      <td>ЛК</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1667</th>\n",
-       "      <td>вход в личный кабинет</td>\n",
-       "      <td>При проблемах со входом в личный кабинет, преж...</td>\n",
-       "      <td>ЛК</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                   question  \\\n",
-       "503   вход в личный кабинет   \n",
-       "930                надбавка   \n",
-       "1662               надбавка   \n",
-       "1667  вход в личный кабинет   \n",
-       "\n",
-       "                                                content   category  \n",
-       "503   При проблемах со входом в личный кабинет, преж...         ЛК  \n",
-       "930   Создайте, пожалуйста, обращение в ИТ поддержку...  поддержка  \n",
-       "1662  По данному вопросу Вы можете обратиться в кадр...         ЛК  \n",
-       "1667  При проблемах со входом в личный кабинет, преж...         ЛК  "
+       "question                                вход в личный кабинет\n",
+       "content     При проблемах со входом в личный кабинет, преж...\n",
+       "category                                                   ЛК\n",
+       "Name: 503, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,47 +817,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Создайте, пожалуйста, обращение в ИТ поддержку на портале support'"
+       "'Для внесения данных по личному автомобилю обратитесь, пожалуйста, к своему руководителю для создания заявки по теме \"Изменение режима характера работы\", подтема \"Установка РХР и топливной карты\". В комментариях опишите ситуацию и приложите ПТС, СТС, страховой полис и водительское удостоверение.'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_qa.iloc[930]['content']"
+    "df_qa.iloc[2]['content']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'По данному вопросу Вы можете обратиться в кадровую службу, создав заявку \"Консультация по HR вопросам\"'"
+       "'Табель был закрыт утром, но напоминание о не закрытии табеля выходит на рабочий стол'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_qa.iloc[1662]['content']"
+    "df_qa.iloc[1396]['question']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +988,7 @@
        "[276 rows x 3 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1014,7 @@
        "       'дмс', 'оператор', 'обучение', 'Отпуск'], dtype=object)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,104 +1025,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>category</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>БиР</td>\n",
-       "      <td>Беременность и роды</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>зп</td>\n",
-       "      <td>заработная плата</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>НДФЛ</td>\n",
-       "      <td>Налог на доходы физических лиц</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>СТД</td>\n",
-       "      <td>срочный трудовой договор</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>ТК</td>\n",
-       "      <td>трудовой договор</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>АО</td>\n",
-       "      <td>авансовый отчет</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>SLA</td>\n",
-       "      <td>сроки</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>ЭЦП</td>\n",
-       "      <td>электронная цифровая подпись</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>КР</td>\n",
-       "      <td>кадровый резерв</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  category                     description\n",
-       "1      БиР             Беременность и роды\n",
-       "2       зп                заработная плата\n",
-       "3     НДФЛ  Налог на доходы физических лиц\n",
-       "4      СТД        срочный трудовой договор\n",
-       "5       ТК                трудовой договор\n",
-       "6       АО                 авансовый отчет\n",
-       "7      SLA                           сроки\n",
-       "8      ЭЦП    электронная цифровая подпись\n",
-       "9       КР                 кадровый резерв"
+       "'Не открывается итоговый тест на директора магазина.'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_glossary"
+    "df_qa.iloc[1672]['question']"
    ]
   }
  ],
